@@ -48,6 +48,7 @@ v15.0.00
 		Timetable: added ability to set and display text and background colour for timetable day headers
 		Timetable: adjusted font size for shorter lessons to allow display or facility name
 		Timetable Admin: added link from course view in Manage Courses & Classes to edit class enrolment
+		Timetable Admin: updated Course Enrolment Rollover to prevent duplicates and not copy users set to Left
 		User Admin: improved usability of feedback in Step 3 of the rollover
 
 v14.0.00
